[package]
name = "md-recover"
version = "0.1.0"
edition = "2021"
description = "Data recovery tool for Linux MD Software RAID devices"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binary-layout = "=3.2.0"
bitflags = "=2.4.0"
byteorder = "=1.4.3"
clap = { version = "=4.4.3", features = ["derive"] }
itertools = "=0.11.0"
iocuddle = "0.1.1"
os_display = "=0.1.3"
