[package]
name = "md-recover"
version = "0.1.0"
edition = "2021"
description = "Data recovery tool for Linux MD Software RAID devices"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayref = "=0.3.9"
binary-layout = "=4.0.2"
bitflags = "=2.9.1"
byteorder = "=1.5.0"
clap = { version = "=4.5.40", features = ["derive"] }
crc = "=3.3.0"
derive_more = { version = "=2.0.1", features = ["from", "into"] }
itertools = "=0.14.0"
iocuddle = "=0.1.1"
num_enum = "=0.7.4"
os_display = "=0.1.4"
uuid = "=1.17.0"