[package]
name = "md-recover"
version = "0.1.0"
edition = "2021"
description = "Data recovery tool for Linux MD Software RAID devices"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayref = "=0.3.9"
binary-layout = "=4.0.2"
bitflags = "=2.10.0"
byteorder = "=1.5.0"
chrono = "=0.4.43"
clap = { version = "=4.5.54", features = ["derive"] }
crc = "=3.4.0"
derive_more = { version = "=2.1.1", features = ["add", "add_assign", "as_ref", "deref", "deref_mut", "display", "from", "into"] }
itertools = "=0.14.0"
iocuddle = "=0.1.1"
num_enum = "=0.7.5"
num-integer = "=0.1.46"
os_display = "=0.1.4"
uuid = "=1.19.0"

[dev-dependencies]
anyhow = "=1.0.100"
flate2 = "=1.1.8"